--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <!-- Page Header-->
     <header
       class="masthead"
-      style="background-image: url('assets/img/home-bg.jpg')"
+      style="background-image: url('/assets/img/home-bg.jpg')"
     >
       <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
@@ -23,14 +23,36 @@
     <div class="container px-4 px-lg-5">
       <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-10 col-lg-8 col-xl-7">
+          
+          <form id="searchForm" action="/search" method="post">
+            <div class="form-floating">
+              <input
+                class="form-control"
+                id="searchTerm"
+                type="text"
+                name="searchTerm"
+                value="<%= term %>"
+                placeholder="Search for post titles"
+              />
+              <label for="searchTerm">Search Posts</label>
+            </div>
+            <br />
+            <button
+              class="btn btn-primary text-uppercase"
+              id="sendMessageButton"
+              type="submit"
+            >
+              Send
+            </button>
+          </form>
+          
+          <% for( let i = 0; i < blogposts.length; i++ ) { %>
           <!-- Post preview-->
           <div class="post-preview">
-            <a href="post.html">
-              <h2 class="post-title">
-                Man must explore, and this is exploration at its greatest
-              </h2>
+            <a href="/post/<%= blogposts[i]._id %> ">
+              <h2 class="post-title"><%= blogposts[i].title %></h2>
               <h3 class="post-subtitle">
-                Problems look mighty small from 150 miles up
+                <%= blogposts[i].body %></h2>
               </h3>
             </a>
             <p class="post-meta">
@@ -41,56 +63,8 @@
           </div>
           <!-- Divider-->
           <hr class="my-4" />
-          <!-- Post preview-->
-          <div class="post-preview">
-            <a href="post.html"
-              ><h2 class="post-title">
-                I believe every human has a finite number of heartbeats. I don't
-                intend to waste any of mine.
-              </h2></a
-            >
-            <p class="post-meta">
-              Posted by
-              <a href="#!">Start Bootstrap</a>
-              on September 18, 2021
-            </p>
-          </div>
-          <!-- Divider-->
-          <hr class="my-4" />
-          <!-- Post preview-->
-          <div class="post-preview">
-            <a href="post.html">
-              <h2 class="post-title">Science has not yet mastered prophecy</h2>
-              <h3 class="post-subtitle">
-                We predict too much for the next year and yet far too little for
-                the next ten.
-              </h3>
-            </a>
-            <p class="post-meta">
-              Posted by
-              <a href="#!">Start Bootstrap</a>
-              on August 24, 2021
-            </p>
-          </div>
-          <!-- Divider-->
-          <hr class="my-4" />
-          <!-- Post preview-->
-          <div class="post-preview">
-            <a href="post.html">
-              <h2 class="post-title">Failure is not an option</h2>
-              <h3 class="post-subtitle">
-                Many say exploration is part of our destiny, but it’s actually
-                our duty to future generations.
-              </h3>
-            </a>
-            <p class="post-meta">
-              Posted by
-              <a href="#!">Start Bootstrap</a>
-              on July 8, 2021
-            </p>
-          </div>
-          <!-- Divider-->
-          <hr class="my-4" />
+          <% } %>
+          
           <!-- Pager-->
           <div class="d-flex justify-content-end mb-4">
             <a class="btn btn-primary text-uppercase" href="#!"
