--- a/views/create.ejs
+++ b/views/create.ejs
@@ -31,7 +31,7 @@
               <!-- To make this form functional, sign up at-->
               <!-- https://startbootstrap.com/solution/contact-forms-->
               <!-- to get an API token!-->
-              <form id="contactForm" action="/post/store" method="post">
+              <form id="contactForm" action="/posts/store" method="post">
                 <div class="form-floating">
                   <input
                     class="form-control"
