--- a/views/post.ejs
+++ b/views/post.ejs
@@ -6,7 +6,9 @@
     <!-- Page Header-->
     <header
       class="masthead"
-      style="background-image: url('/assets/img/post-bg.jpg')"
+      style="
+        background-image: url('<% if (blogpost.image) { %> <%= (blogpost.image) %> <% } %> <% if (!blogpost.image) { %>/assets/img/post-bg.jpg<% } %> ');
+      "
     >
       <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
