--- a/views/create.ejs
+++ b/views/create.ejs
@@ -24,13 +24,15 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
           <div class="col-md-10 col-lg-8 col-xl-7">
             <div class="my-5">
-              <!-- * * * * * * * * * * * * * * *-->
-              <!-- * * SB Forms Contact Form * *-->
-              <!-- * * * * * * * * * * * * * * *-->
-              <!-- This form is pre-integrated with SB Forms.-->
-              <!-- To make this form functional, sign up at-->
-              <!-- https://startbootstrap.com/solution/contact-forms-->
-              <!-- to get an API token!-->
+              <% if (errors != null && errors.length > 0) { %>
+              <ul class="list-group">
+                <% for (let i = 0; i < errors.length; i++) { %>
+                <li class="list-group-item list-group-item-danger">
+                  <%= errors[i] %>
+                </li>
+                <% } %>
+              </ul>
+              <% } %>
               <form
                 id="contactForm"
                 action="/posts/store"
@@ -44,6 +46,7 @@
                     type="text"
                     name="title"
                     placeholder="Enter your title..."
+                    value="<%= title %>"
                   />
                   <label for="title">blog title</label>
                 </div>
@@ -55,6 +58,7 @@
                     name="body"
                     placeholder="Enter your body here..."
                     style="height: 12rem"
+                    value="<%= body %>"
                   ></textarea>
                   <label for="body">blog content body</label>
                 </div>
